--- a/motiv8-be/requirements.txt
+++ b/motiv8-be/requirements.txt
@@ -7,3 +7,9 @@ onnxruntime>=1.16.0
 torch>=2.0.0
 opencv-python>=4.8.0
 numpy>=1.24.0
+diffusers>=0.27.0
+transformers>=4.38.0
+accelerate>=0.27.0
+safetensors>=0.4.0
+Pillow>=10.0.0
+ip-adapter>=0.1.0
