--- a/motiv8-be/requirements.txt
+++ b/motiv8-be/requirements.txt
@@ -14,3 +14,7 @@ safetensors>=0.4.0
 Pillow>=10.0.0
 timm>=1.0.0
 einops>=0.8.0
+sqlalchemy>=2.0.0
+authlib>=1.3.0
+python-jose[cryptography]>=3.3.0
+httpx>=0.24.0
