--- a/motiv8-be/requirements.txt
+++ b/motiv8-be/requirements.txt
@@ -15,6 +15,9 @@ Pillow>=10.0.0
 timm>=1.0.0
 einops>=0.8.0
 sqlalchemy>=2.0.0
+psycopg2-binary>=2.9.0
 authlib>=1.3.0
 python-jose[cryptography]>=3.3.0
 httpx>=0.24.0
+boto3>=1.28.0
+python-dotenv>=1.0.0
