Add SSM managed policy to EC2 role for Systems Manager access

--- a/infrastructure/cloudformation/main-stack.yaml
+++ b/infrastructure/cloudformation/main-stack.yaml
@@ -336,6 +336,7 @@ Resources:
             Action: 'sts:AssumeRole'
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
+        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
       Policies:
         - PolicyName: S3Access
           PolicyDocument:
