update api destination

--- a/infrastructure/cloudformation/ec2-instances.yaml
+++ b/infrastructure/cloudformation/ec2-instances.yaml
@@ -369,13 +369,45 @@ Resources:
           pip install --upgrade pip
           pip install -r requirements-webapp.txt
 
+          # Write secrets to an env file (raw .env for app tooling)
           aws secretsmanager get-secret-value \
             --secret-id ${AppSecretsArn} \
             --region ${AWS::Region} \
             --query SecretString \
-            --output text | python3 -c "import sys, json; secrets = json.load(sys.stdin); [print(f'{k}={v}') for k, v in secrets.items()]" > /app/motiv8-be/.env
+            --output text \
+          | python3 - << 'PY'
+          import json, sys
+          secrets = json.load(sys.stdin)
+          for k,v in secrets.items():
+              # Write raw KEY=VALUE lines (no export)
+              print(f"{k}={v}")
+          PY > /app/motiv8-be/.env
 
           echo "CORS_ALLOWED_ORIGINS=https://${RootDomainName}" >> /app/motiv8-be/.env
+          echo "AWS_REGION=${AWS::Region}" >> /app/motiv8-be/.env
+
+          # Create a systemd-safe env file (quotes + spaces handled)
+          python3 - << 'PY'
+          import shlex
+          from pathlib import Path
+
+          src = Path("/app/motiv8-be/.env").read_text().splitlines()
+          out = []
+          for line in src:
+              line=line.strip()
+              if not line or line.startswith("#"):
+                  continue
+              if "=" not in line:
+                  continue
+              k,v = line.split("=",1)
+              k = k.strip()
+              v = v.strip()
+              # systemd EnvironmentFile accepts KEY=VALUE; safest is shell-quoting values
+              out.append(f"{k}={shlex.quote(v)}")
+          Path("/etc/motiv8-webapp.env").write_text("\n".join(out) + "\n")
+          PY
+
+          chmod 600 /etc/motiv8-webapp.env
 
           cat > /etc/systemd/system/motiv8-webapp.service << 'SVCEOF'
           [Unit]
@@ -386,7 +418,10 @@ Resources:
           Type=simple
           User=root
           WorkingDirectory=/app/motiv8-be
+
+          EnvironmentFile=/etc/motiv8-webapp.env
           Environment="PATH=/app/motiv8-be/venv/bin:/usr/local/bin:/usr/bin:/bin"
+
           ExecStart=/app/motiv8-be/venv/bin/uvicorn main:app --host 0.0.0.0 --port 8000
           Restart=always
           RestartSec=10
@@ -397,10 +432,13 @@ Resources:
 
           systemctl daemon-reload
           systemctl enable motiv8-webapp.service
-          systemctl start motiv8-webapp.service
+          systemctl restart motiv8-webapp.service
 
-          sleep 5
+          sleep 3
           systemctl is-active motiv8-webapp.service
+
+          # Debug proof: show what systemd loaded + what process has
+          systemctl show motiv8-webapp.service -p Environment | sed 's/Environment=//' | head -c 2000 || true
 
           /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebAppInstance --region ${AWS::Region}
     CreationPolicy:
