--- a/infrastructure/cloudformation/ec2-instances.yaml
+++ b/infrastructure/cloudformation/ec2-instances.yaml
@@ -76,11 +76,11 @@ Parameters:
     Default: v1
     Description: Bump to trigger frontend republish (custom resource) and CloudFront invalidation.
 
-  # NEW: bump to force WebAppInstance replacement so it pulls latest backend artifact
+  # NEW: bump to roll ASG (size=1) so it pulls latest backend artifact
   ApiDeployVersion:
     Type: String
     Default: v1
-    Description: Bump to force WebAppInstance replacement (UserData changes) so it pulls the latest backend tarball.
+    Description: Bump to trigger LaunchTemplate/UserData change and roll the API instance (ASG size=1).
 
 Mappings:
   RegionMap:
@@ -215,7 +215,7 @@ Resources:
         HostedZoneId: Z2FDTNDATAQYW2
 
   # ==========================================================
-  # API: ALB + ACM + EC2 (uvicorn :8000) + Route53
+  # API: ALB + ACM + ASG(size=1) (uvicorn :8000) + Route53
   # ==========================================================
   ApiAlbSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -278,9 +278,6 @@ Resources:
       TargetType: instance
       Protocol: HTTP
       Port: 8000
-      Targets:
-        - Id: !Ref WebAppInstance
-          Port: 8000
       HealthCheckProtocol: HTTP
       HealthCheckPath: /health
       Matcher:
@@ -322,129 +319,162 @@ Resources:
         HostedZoneId: !GetAtt ApiLoadBalancer.CanonicalHostedZoneID
 
   # ==========================================================
-  # Web App EC2 Instance (Always Running) - API only
-  # Includes ApiDeployVersion in UserData to force replacement on bump
+  # Web App LaunchTemplate + ASG (Desired=1)
+  # Rolling update triggered by ApiDeployVersion/UserData changes.
+  # NOTE: With MaxSize=1 and MinInstancesInService=0, updates can briefly go unavailable.
   # ==========================================================
-  WebAppInstance:
-    Type: AWS::EC2::Instance
+  WebAppLaunchTemplate:
+    Type: AWS::EC2::LaunchTemplate
     Properties:
-      InstanceType: !Ref WebAppInstanceType
-      KeyName: !Ref KeyPairName
-      ImageId: !FindInMap [RegionMap, !Ref 'AWS::Region', AMI]
-      IamInstanceProfile: !Ref InstanceProfileName
-      SecurityGroupIds:
-        - !Ref ApiInstanceSecurityGroup
-      SubnetId: !Ref PublicSubnet1
-      BlockDeviceMappings:
-        - DeviceName: /dev/xvda
-          Ebs:
-            VolumeSize: 30
-            VolumeType: gp3
-            DeleteOnTermination: true
+      LaunchTemplateName: !Sub ${EnvironmentName}-webapp-lt
+      LaunchTemplateData:
+        InstanceType: !Ref WebAppInstanceType
+        KeyName: !Ref KeyPairName
+        ImageId: !FindInMap [RegionMap, !Ref 'AWS::Region', AMI]
+        IamInstanceProfile:
+          Name: !Ref InstanceProfileName
+        SecurityGroupIds:
+          - !Ref ApiInstanceSecurityGroup
+        BlockDeviceMappings:
+          - DeviceName: /dev/xvda
+            Ebs:
+              VolumeSize: 30
+              VolumeType: gp3
+              DeleteOnTermination: true
+        TagSpecifications:
+          - ResourceType: instance
+            Tags:
+              - Key: Name
+                Value: !Sub ${EnvironmentName}-webapp
+              - Key: Role
+                Value: api
+              - Key: DeployVersion
+                Value: !Ref ApiDeployVersion
+          - ResourceType: volume
+            Tags:
+              - Key: Role
+                Value: api
+        UserData:
+          Fn::Base64: !Sub |
+            #!/bin/bash -xe
+            exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
+
+            echo "ApiDeployVersion=${ApiDeployVersion}"
+            echo "${ApiDeployVersion}" > /etc/motiv8-deploy-version
+
+            yum update -y
+            yum install -y awscli aws-cfn-bootstrap git python3 python3-pip python3-devel gcc
+
+            mkdir -p /app
+            aws s3 cp s3://${UploadsBucket}/deployment/motiv8-be.tar.gz /tmp/motiv8-be.tar.gz --region ${AWS::Region}
+
+            # Ensure old code can't linger
+            rm -rf /app/motiv8-be
+            tar -xzf /tmp/motiv8-be.tar.gz -C /app
+            rm /tmp/motiv8-be.tar.gz
+
+            cd /app/motiv8-be
+            python3 -m venv venv
+            source venv/bin/activate
+            pip install --upgrade pip
+            pip install -r requirements-webapp.txt
+
+            # Write secrets to an env file (raw .env for app tooling)
+            aws secretsmanager get-secret-value \
+              --secret-id ${AppSecretsArn} \
+              --region ${AWS::Region} \
+              --query SecretString \
+              --output text \
+            | python3 - << 'PY'
+            import json, sys
+            secrets = json.load(sys.stdin)
+            for k,v in secrets.items():
+                print(f"{k}={v}")
+            PY > /app/motiv8-be/.env
+
+            echo "CORS_ALLOWED_ORIGINS=https://${RootDomainName}" >> /app/motiv8-be/.env
+            echo "AWS_REGION=${AWS::Region}" >> /app/motiv8-be/.env
+
+            # Create a systemd-safe env file (quotes + spaces handled)
+            python3 - << 'PY'
+            import shlex
+            from pathlib import Path
+            src = Path("/app/motiv8-be/.env").read_text().splitlines()
+            out = []
+            for line in src:
+                line=line.strip()
+                if not line or line.startswith("#"):
+                    continue
+                if "=" not in line:
+                    continue
+                k,v = line.split("=",1)
+                k = k.strip()
+                v = v.strip()
+                out.append(f"{k}={shlex.quote(v)}")
+            Path("/etc/motiv8-webapp.env").write_text("\n".join(out) + "\n")
+            PY
+
+            chmod 600 /etc/motiv8-webapp.env
+
+            cat > /etc/systemd/system/motiv8-webapp.service << 'SVCEOF'
+            [Unit]
+            Description=motiv8me Web API
+            After=network.target
+
+            [Service]
+            Type=simple
+            User=root
+            WorkingDirectory=/app/motiv8-be
+            EnvironmentFile=/etc/motiv8-webapp.env
+            Environment="PATH=/app/motiv8-be/venv/bin:/usr/local/bin:/usr/bin:/bin"
+            ExecStart=/app/motiv8-be/venv/bin/uvicorn main:app --host 0.0.0.0 --port 8000 --proxy-headers --forwarded-allow-ips="*"
+            Restart=always
+            RestartSec=10
+
+            [Install]
+            WantedBy=multi-user.target
+            SVCEOF
+
+            systemctl daemon-reload
+            systemctl enable motiv8-webapp.service
+            systemctl restart motiv8-webapp.service
+
+            sleep 3
+            systemctl is-active motiv8-webapp.service
+
+            # Debug proof: show what systemd loaded + what process has
+            systemctl show motiv8-webapp.service -p Environment | sed 's/Environment=//' | head -c 2000 || true
+
+  WebAppAutoScalingGroup:
+    Type: AWS::AutoScaling::AutoScalingGroup
+    Properties:
+      AutoScalingGroupName: !Sub ${EnvironmentName}-webapp-asg
+      VPCZoneIdentifier:
+        - !Ref PublicSubnet1
+        - !Ref PublicSubnet2
+      MinSize: "1"
+      MaxSize: "1"
+      DesiredCapacity: "1"
+      HealthCheckType: ELB
+      HealthCheckGracePeriod: 900
+      TargetGroupARNs:
+        - !Ref ApiTargetGroup
+      LaunchTemplate:
+        LaunchTemplateId: !Ref WebAppLaunchTemplate
+        Version: !GetAtt WebAppLaunchTemplate.LatestVersionNumber
       Tags:
-        - Key: Name
-          Value: !Sub ${EnvironmentName}-webapp
         - Key: Role
           Value: api
+          PropagateAtLaunch: true
         - Key: DeployVersion
           Value: !Ref ApiDeployVersion
-      UserData:
-        Fn::Base64: !Sub |
-          #!/bin/bash -xe
-          exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
-
-          echo "ApiDeployVersion=${ApiDeployVersion}"
-          echo "${ApiDeployVersion}" > /etc/motiv8-deploy-version
-
-          yum update -y
-          yum install -y awscli aws-cfn-bootstrap git python3 python3-pip python3-devel gcc
-
-          mkdir -p /app
-          aws s3 cp s3://${UploadsBucket}/deployment/motiv8-be.tar.gz /tmp/motiv8-be.tar.gz --region ${AWS::Region}
-          tar -xzf /tmp/motiv8-be.tar.gz -C /app
-          rm /tmp/motiv8-be.tar.gz
-
-          cd /app/motiv8-be
-          python3 -m venv venv
-          source venv/bin/activate
-          pip install --upgrade pip
-          pip install -r requirements-webapp.txt
-
-          # Write secrets to an env file (raw .env for app tooling)
-          aws secretsmanager get-secret-value \
-            --secret-id ${AppSecretsArn} \
-            --region ${AWS::Region} \
-            --query SecretString \
-            --output text \
-          | python3 - << 'PY'
-          import json, sys
-          secrets = json.load(sys.stdin)
-          for k,v in secrets.items():
-              # Write raw KEY=VALUE lines (no export)
-              print(f"{k}={v}")
-          PY > /app/motiv8-be/.env
-
-          echo "CORS_ALLOWED_ORIGINS=https://${RootDomainName}" >> /app/motiv8-be/.env
-          echo "AWS_REGION=${AWS::Region}" >> /app/motiv8-be/.env
-
-          # Create a systemd-safe env file (quotes + spaces handled)
-          python3 - << 'PY'
-          import shlex
-          from pathlib import Path
-
-          src = Path("/app/motiv8-be/.env").read_text().splitlines()
-          out = []
-          for line in src:
-              line=line.strip()
-              if not line or line.startswith("#"):
-                  continue
-              if "=" not in line:
-                  continue
-              k,v = line.split("=",1)
-              k = k.strip()
-              v = v.strip()
-              # systemd EnvironmentFile accepts KEY=VALUE; safest is shell-quoting values
-              out.append(f"{k}={shlex.quote(v)}")
-          Path("/etc/motiv8-webapp.env").write_text("\n".join(out) + "\n")
-          PY
-
-          chmod 600 /etc/motiv8-webapp.env
-
-          cat > /etc/systemd/system/motiv8-webapp.service << 'SVCEOF'
-          [Unit]
-          Description=motiv8me Web API
-          After=network.target
-
-          [Service]
-          Type=simple
-          User=root
-          WorkingDirectory=/app/motiv8-be
-
-          EnvironmentFile=/etc/motiv8-webapp.env
-          Environment="PATH=/app/motiv8-be/venv/bin:/usr/local/bin:/usr/bin:/bin"
-
-          ExecStart=/app/motiv8-be/venv/bin/uvicorn main:app --host 0.0.0.0 --port 8000 --proxy-headers --forwarded-allow-ips="*"
-          Restart=always
-          RestartSec=10
-
-          [Install]
-          WantedBy=multi-user.target
-          SVCEOF
-
-          systemctl daemon-reload
-          systemctl enable motiv8-webapp.service
-          systemctl restart motiv8-webapp.service
-
-          sleep 3
-          systemctl is-active motiv8-webapp.service
-
-          # Debug proof: show what systemd loaded + what process has
-          systemctl show motiv8-webapp.service -p Environment | sed 's/Environment=//' | head -c 2000 || true
-
-          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebAppInstance --region ${AWS::Region}
-    CreationPolicy:
-      ResourceSignal:
-        Timeout: PT30M
+          PropagateAtLaunch: true
+    UpdatePolicy:
+      AutoScalingRollingUpdate:
+        MinInstancesInService: 0
+        MaxBatchSize: 1
+        PauseTime: PT10M
+        WaitOnResourceSignals: false
 
   # ==========================================================
   # Batch Processing EC2 Instance (Scheduled)
@@ -783,9 +813,9 @@ Outputs:
     Description: API ALB DNS
     Value: !GetAtt ApiLoadBalancer.DNSName
 
-  WebAppInstanceId:
-    Description: API EC2 Instance ID
-    Value: !Ref WebAppInstance
+  WebAppAsgName:
+    Description: API AutoScaling Group name (DesiredCapacity=1)
+    Value: !Ref WebAppAutoScalingGroup
 
   BatchInstanceId:
     Description: Batch Instance ID
