--- a/infrastructure/cloudformation/ec2-instances.yaml
+++ b/infrastructure/cloudformation/ec2-instances.yaml
@@ -385,34 +385,24 @@ Resources:
               --region ${AWS::Region} \
               --query SecretString \
               --output text \
-            | python3 - << 'PY'
-            import json, sys
-            secrets = json.load(sys.stdin)
-            for k,v in secrets.items():
-                print(f"{k}={v}")
-            PY > /app/motiv8-be/.env
+            | python3 -c 'import json,sys; s=json.load(sys.stdin); [print(f"{k}={v}") for k,v in s.items()]' \
+            > /app/motiv8-be/.env
 
             echo "CORS_ALLOWED_ORIGINS=https://${RootDomainName}" >> /app/motiv8-be/.env
             echo "AWS_REGION=${AWS::Region}" >> /app/motiv8-be/.env
 
             # Create a systemd-safe env file (quotes + spaces handled)
-            python3 - << 'PY'
-            import shlex
-            from pathlib import Path
-            src = Path("/app/motiv8-be/.env").read_text().splitlines()
-            out = []
+            python3 -c 'import shlex; from pathlib import Path
+            src=Path("/app/motiv8-be/.env").read_text().splitlines()
+            out=[]
             for line in src:
-                line=line.strip()
-                if not line or line.startswith("#"):
-                    continue
-                if "=" not in line:
-                    continue
-                k,v = line.split("=",1)
-                k = k.strip()
-                v = v.strip()
-                out.append(f"{k}={shlex.quote(v)}")
-            Path("/etc/motiv8-webapp.env").write_text("\n".join(out) + "\n")
-            PY
+              line=line.strip()
+              if not line or line.startswith("#") or "=" not in line:
+                continue
+              k,v=line.split("=",1)
+              out.append(f"{k.strip()}={shlex.quote(v.strip())}")
+            Path("/etc/motiv8-webapp.env").write_text("\n".join(out)+ "\n")
+            '
 
             chmod 600 /etc/motiv8-webapp.env
 
