--- a/infrastructure/cloudformation/ec2-instances.yaml
+++ b/infrastructure/cloudformation/ec2-instances.yaml
@@ -435,10 +435,10 @@ Resources:
             # Debug proof: show what systemd loaded + what process has
             systemctl show motiv8-webapp.service -p Environment | sed 's/Environment=//' | head -c 2000 || true
 
-  WebAppAutoScalingGroup:
+  WebAppAutoScalingGroupV2:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
-      AutoScalingGroupName: !Sub ${EnvironmentName}-webapp-asg
+      AutoScalingGroupName: !Sub webapp-asg
       VPCZoneIdentifier:
         - !Ref PublicSubnet1
         - !Ref PublicSubnet2
@@ -805,7 +805,7 @@ Outputs:
 
   WebAppAsgName:
     Description: API AutoScaling Group name (DesiredCapacity=1)
-    Value: !Ref WebAppAutoScalingGroup
+    Value: !Ref WebAppAutoScalingGroupV2
 
   BatchInstanceId:
     Description: Batch Instance ID
