--- a/infrastructure/cloudformation/ec2-instances.yaml
+++ b/infrastructure/cloudformation/ec2-instances.yaml
@@ -525,7 +525,7 @@ Resources:
   # ==========================================================
   # Batch Processing EC2 Instance (Scheduled)
   # ==========================================================
-  BatchInstance2:
+  BatchInstance:
     Type: AWS::EC2::Instance
     Properties:
       InstanceType: !Ref BatchInstanceType
@@ -639,7 +639,7 @@ Resources:
           # Run boot-prep now so the current boot also starts the batch job
           systemctl start motiv8-batch-boot.service
 
-          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource BatchInstance2 --region ${AWS::Region}
+          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource BatchInstance --region ${AWS::Region}
 
   # ==========================================================
   # Lambda Function for Starting Batch Instance
@@ -654,7 +654,7 @@ Resources:
       Timeout: 60
       Environment:
         Variables:
-          BATCH_INSTANCE_ID: !Ref BatchInstance2
+          BATCH_INSTANCE_ID: !Ref BatchInstance
       Code:
         ZipFile: |
           import boto3
@@ -900,4 +900,4 @@ Outputs:
 
   BatchInstanceId:
     Description: Batch Instance ID
-    Value: !Ref BatchInstance2
+    Value: !Ref BatchInstance
