don't let start deadlock with async

--- a/infrastructure/cloudformation/ec2-instances.yaml
+++ b/infrastructure/cloudformation/ec2-instances.yaml
@@ -525,7 +525,7 @@ Resources:
   # ==========================================================
   # Batch Processing EC2 Instance (Scheduled)
   # ==========================================================
-  BatchInstance2:
+  BatchInstance:
     Type: AWS::EC2::Instance
     Properties:
       InstanceType: !Ref BatchInstanceType
@@ -650,7 +650,7 @@ Resources:
           # --------------------------------------------------------------------
           systemctl daemon-reload
           systemctl enable motiv8-batch.service
-          systemctl start motiv8-batch.service
+          systemctl start --no-block motiv8-batch.service
 
           # --------------------------------------------------------------------
           # 4) CloudFormation signal
@@ -658,7 +658,7 @@ Resources:
           /opt/aws/bin/cfn-signal \
             -e $? \
             --stack ${AWS::StackName} \
-            --resource BatchInstance2 \
+            --resource BatchInstance \
             --region ${AWS::Region}
 
 
@@ -675,7 +675,7 @@ Resources:
       Timeout: 60
       Environment:
         Variables:
-          BATCH_INSTANCE_ID: !Ref BatchInstance2
+          BATCH_INSTANCE_ID: !Ref BatchInstance
       Code:
         ZipFile: |
           import boto3
@@ -921,4 +921,4 @@ Outputs:
 
   BatchInstanceId:
     Description: Batch Instance ID
-    Value: !Ref BatchInstance2
+    Value: !Ref BatchInstance
