--- a/infrastructure/cloudformation/ec2-instances.yaml
+++ b/infrastructure/cloudformation/ec2-instances.yaml
@@ -783,6 +783,7 @@ Resources:
           pip install --upgrade --force-reinstall \
             torch torchvision torchaudio \
             --index-url https://download.pytorch.org/whl/cu118
+          pip install -U onnxruntime-gpu
 
           pip install -r requirements.txt
 
